<resources>
    <string name="app_name">D-Path</string>
    <string name="d_path">D-Path</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="field_required_error">This field is required</string>
    <string name="password_length_error">Password must be at least 6 characters</string>
    <string name="invalid_email_error">Email is invalid</string>
    <string name="auth_fail_message">Sign in failed</string>
    <string name="title_courses">Recommended Courses</string>
    <string name="title_saved">Saved</string>
    <string name="title_profile">Profile</string>
    <string name="rate">Rate!</string>
    <string name="test">Test</string>
    <string name="major">Major</string>
    <string name="reset_preference">Reset All Preferences</string>
    <string name="sign_out">Sign Out</string>
    <string name="description">Description</string>
    <string name="instructors">Instructors</string>
    <string name="distributives">Distributives</string>
    <string name="offered">Offered</string>
    <string name="allcourses">All Courses</string>
    <string name="reset_ratings">Reset All Ratings</string>
</resources>
