<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_allcourses"
        android:title="@string/allcourses"
        android:fontFamily="@font/avenir"
        android:icon="@drawable/ic_assignment_black_24dp"/>
    <item
        android:id="@+id/navigation_courses"
        android:title="@string/title_courses"
        android:fontFamily="@font/avenir"
        android:icon="@drawable/ic_school_black_24dp"/>
    <item
        android:id="@+id/navigation_saved"
        android:title="@string/title_saved"
        android:icon="@drawable/ic_check_circle_black_24dp"
        />
    <item
        android:id="@+id/navigation_Profile"
        android:title="@string/title_profile"
        android:icon="@drawable/ic_person_black_24dp"/>

</menu>