<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@color/nav"/>
    <ImageView
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:background="@drawable/circle"/>
    <ImageView
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:src="@drawable/ic_person_black_24dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="280dp"
        android:layout_centerHorizontal="true"
        android:orientation="vertical"
        android:paddingBottom="50dp">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="70dp"
                android:layout_height="40dp"
                android:background="@drawable/profile_header"
                android:text="@string/email"
                android:gravity="center"
                android:fontFamily="@font/avenirbold"
                android:textSize="15sp"/>
            <TextView
                android:id="@+id/profile_email"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:gravity="center_vertical"
                android:paddingLeft="20dp"
                android:background="@drawable/profile_text"
                android:fontFamily="@font/avenir"
                android:text="@string/test"
                android:textSize="15sp"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="30dp">
            <TextView
                android:layout_width="70dp"
                android:layout_height="40dp"
                android:background="@drawable/profile_header"
                android:text="@string/major"
                android:gravity="center"
                android:fontFamily="@font/avenirbold"
                android:textSize="15sp"/>
            <TextView
                android:id="@+id/profile_major"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:gravity="center_vertical"
                android:paddingLeft="20dp"
                android:background="@drawable/profile_text"
                android:fontFamily="@font/avenir"
                android:text="@string/test"
                android:textSize="15sp"/>

        </LinearLayout>
        <Button
            android:id="@+id/reset_preference_button"
            android:layout_width="180dp"
            android:layout_height="50dp"
            android:text="@string/reset_ratings"
            android:gravity="center"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/avenir"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:background="@drawable/profile_button"
            android:layout_marginTop="30dp"/>
        <Button
            android:id="@+id/sign_out_button"
            android:layout_width="180dp"
            android:layout_height="50dp"
            android:text="@string/sign_out"
            android:fontFamily="@font/avenir"
            android:textSize="16sp"
            android:gravity="center"
            android:textColor="@color/white"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/profile_button"
            android:layout_marginTop="20dp" />
    </LinearLayout>


</RelativeLayout>