<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@mipmap/login_background"
    tools:context="edu.dartmouth.cs.d_path.Activies.LoginActivity">

    <ImageView
        android:id="@+id/icon_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_artboard_5"
        android:layout_marginTop="30dp"
        android:layout_marginRight="10dp"
        android:layout_gravity="center"/>


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:layout_gravity="center"
        android:theme="@style/TextLabel"
        app:hintEnabled="false"
        >
        <android.support.design.widget.TextInputEditText
            android:id="@+id/email_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop ="100dp"
            android:layout_marginBottom="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:fontFamily="@font/avenir"
            android:background="@drawable/rounded_edit_text"
            android:inputType="textEmailAddress"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:theme="@style/TextLabel"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        app:hintEnabled="false"
        >
        <android.support.design.widget.TextInputEditText
            android:id="@+id/password_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop ="100dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/avenir"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:background="@drawable/rounded_edit_text"
            android:inputType="textEmailAddress"
            />
    </android.support.design.widget.TextInputLayout>


    <Button
        android:id="@+id/login_button"
        android:layout_marginTop="20dp"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:background="@drawable/login_button"
        style="?android:attr/borderlessButtonStyle"
        android:fontFamily="@font/avenir"
        android:onClick="onLogin"/>

    <Button
        android:id="@+id/register_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/register"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:background="@drawable/login_button"
        style="?android:attr/borderlessButtonStyle"
        android:fontFamily="@font/avenir"
        android:onClick="onRegister"/>



</LinearLayout>
