<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@mipmap/register_background3">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_artboard_8"
            android:layout_marginTop="30dp"
            android:layout_marginRight="10dp"
            android:layout_gravity="center"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="5dp"
            android:theme="@style/TextLabel"
            >
            <android.support.design.widget.TextInputEditText
                android:id="@+id/email_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop ="85dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/avenir"
                android:inputType="textEmailAddress"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:theme="@style/TextLabel"
            >
            <android.support.design.widget.TextInputEditText
                android:id="@+id/password_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop ="90dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/avenir"
                android:inputType="textEmailAddress"/>
        </android.support.design.widget.TextInputLayout>

        <Spinner
            android:id="@+id/major_register"
            android:layout_marginTop="30dp"
            android:layout_width="280dp"
            android:layout_marginLeft="20dp"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:fontFamily="@font/avenir"/>
        <Button
            android:id="@+id/register_button2"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:onClick="onRegisterProfile"
            android:layout_gravity="center"
            android:background="@drawable/login_button"
            android:fontFamily="@font/avenir"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_marginTop="40dp"/>


    </LinearLayout>


</android.support.constraint.ConstraintLayout>