<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightGray"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:paddingBottom="50dp">
        <TextView
            android:layout_margin="20dp"
            android:gravity="center_horizontal"
            android:id="@+id/course_title"
            android:layout_width="375dp"
            android:background="@drawable/course_description_header"
            android:textSize="25sp"
            android:textColor="@color/darkGreen"
            android:layout_height="wrap_content"
            android:fontFamily="@font/avenirbold"
            android:text="test"
            android:padding="15dp"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal">
            <RatingBar
                android:id="@+id/rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:numStars="5"
                android:stepSize="1" />
            <Button
                android:id="@+id/rate_button"
                android:layout_marginLeft="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rate"
                android:fontFamily="@font/avenirbold"
                android:textSize="18sp"
                android:onClick="onRate"/>

        </LinearLayout>

        <TextView
            android:id="@+id/course_description_header"
            android:layout_marginTop="20dp"
            android:layout_width="375dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/description"
            android:textSize="18sp"
            android:textColor="@color/darkGreen"
            android:fontFamily="@font/avenirbold"
            android:background="@drawable/course_description_sections"
            android:padding="5dp"/>
        <TextView
            android:id="@+id/course_description"
            android:layout_width="375dp"
            android:layout_height="wrap_content"
            android:background="@drawable/course_description_subsection"
            android:gravity="center_horizontal"
            android:fontFamily="@font/avenir"
            android:padding="15dp"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/course_instructors_header"
            android:layout_marginTop="30dp"
            android:layout_width="375dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/instructors"
            android:textSize="18sp"
            android:textColor="@color/darkGreen"
            android:fontFamily="@font/avenirbold"
            android:background="@drawable/course_description_sections"
            android:padding="5dp"/>
        <TextView
            android:id="@+id/course_instructors"
            android:layout_width="375dp"
            android:layout_height="wrap_content"
            android:background="@drawable/course_description_subsection"
            android:gravity="center_horizontal"
            android:fontFamily="@font/avenir"
            android:padding="15dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:textSize="18sp"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/course_distributives_header"
                    android:layout_marginTop="30dp"
                    android:layout_marginRight="3dp"
                    android:layout_width="182dp"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/distributives"
                    android:textSize="18sp"
                    android:textColor="@color/darkGreen"
                    android:fontFamily="@font/avenirbold"
                    android:background="@drawable/course_description_sections"
                    android:padding="5dp"/>
                <TextView
                    android:id="@+id/course_distributives"
                    android:layout_width="182dp"
                    android:layout_marginRight="3dp"
                    android:layout_height="101dp"
                    android:background="@drawable/course_description_subsection"
                    android:gravity="center"
                    android:fontFamily="@font/avenir"
                    android:padding="15dp"
                    android:textSize="18sp"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/course_offered_header"
                    android:layout_marginTop="30dp"
                    android:layout_marginLeft="3dp"
                    android:layout_width="182dp"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/offered"
                    android:textSize="18sp"
                    android:textColor="@color/darkGreen"
                    android:fontFamily="@font/avenirbold"
                    android:background="@drawable/course_description_sections"
                    android:padding="5dp"/>
                <TextView
                    android:id="@+id/course_offered"
                    android:layout_marginLeft="3dp"
                    android:layout_width="182dp"
                    android:minHeight="102dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/course_description_subsection"
                    android:gravity="center"
                    android:fontFamily="@font/avenir"
                    android:padding="15dp"
                    android:textSize="18sp"/>

            </LinearLayout>

        </LinearLayout>


    </LinearLayout>

</ScrollView>